--- a/HTML/Primera.html
+++ b/HTML/Primera.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
+    <link rel="stylesheet" href="../CSS/Estilos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prueba</title>
 </head>
 <body>
-    
+    <h1>Prueba</h1>
+    <link rel="stylesheet" href="../Imagen/encantado.jpg">
 </body>
 </html>
