--- a/HTML/Primera.html
+++ b/HTML/Primera.html
@@ -7,7 +7,8 @@
     <title>Prueba</title>
 </head>
 <body>
-    <h1>Prueba</h1>
+    <h1 class="id">Prueba</h1>
+    <h1>Prueba2</h1>
     <link rel="stylesheet" href="../Imagen/encantado.jpg">
 </body>
 </html>
